fix: fix scrollbar bug

--- a/src/front/src/assets/css/common.css
+++ b/src/front/src/assets/css/common.css
@@ -65,6 +65,10 @@ input[type="search"]::-webkit-search-cancel-button {
   appearance: none;
 }
 
+::-webkit-scrollbar {
+  display: none;
+}
+
 .page-enter-active, .page-leave-active {
   transition: opacity .3s;
 }
